--- a/catolog.html
+++ b/catolog.html
@@ -26,12 +26,12 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="main-catolog">
         <h1>Магазин готовых шаблонов</h1>
         <section>
           <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
-            <fieldset>
-              <legend>Стоимость</legend>
+            <fieldset class="form">
+              <legend class="form-header">Стоимость</legend>
               <div class="range"></div>
               <p>
               <label for="price-from">От</label>
@@ -42,105 +42,105 @@
               <input type="text" value="15000" id="price-to">
               </p>
             </fieldset>
-            <fieldset>
-              <legend>Сетка:</legend>
+            <fieldset class="form">
+              <legend class="form-header">Сетка:</legend>
               <ul>
                 <li class="filter-option">
                   <input class="visually-hidden" type="radio" name="product-group" value="adaptive" id="filter-adaptive" checked>
-                  <label for="filter-adaptive">Адаптивная</label> 
+                  <label for="filter-adaptive">Адаптивная</label>
                 </li>
                 <li class="filter-option">
                   <input class="visually-hidden" type="radio" name="product-group" value="fixed" id="filter-fixed">
-                  <label for="filter-fixed">Фиксированная</label> 
+                  <label for="filter-fixed">Фиксированная</label>
                 </li>
                 <li class="filter-option">
                   <input class="visually-hidden" type="radio" name="product-group" value="rubber" id="filter-rubber">
-                  <label for="filter-rubber">Резиновая</label> 
+                  <label for="filter-rubber">Резиновая</label>
                 </li>
               </ul>
             </fieldset>
-            <fieldset>
-              <legend>Особенности:</legend>
+            <fieldset class="form">
+              <legend class="form-header">Особенности:</legend>
               <ul>
                 <li class="filter-option">
                   <input class="visually-hidden" type="checkbox" name="features" value="slider" id="filter-slider" checked>
-                  <label for="filter-slider">Слайдер</label> 
+                  <label for="filter-slider">Слайдер</label>
                 </li>
                 <li class="filter-option">
                   <input class="visually-hidden" type="checkbox" name="features" value="advantage" id="filter-advantage">
-                  <label for="filter-advantage">Блок преимуществ</label> 
+                  <label for="filter-advantage">Блок преимуществ</label>
                 </li>
                 <li class="filter-option">
                     <input class="visually-hidden" type="checkbox" name="features" value="news" id="filter-news" checked>
-                  <label for="filter-news">Новости</label> 
+                  <label for="filter-news">Новости</label>
                 </li>
                 <li class="filter-option">
                   <input class="visually-hidden" type="checkbox" name="features" value="hall" id="filter-hall">
-                  <label for="filter-hall">Галерея</label> 
+                  <label for="filter-hall">Галерея</label>
                 </li>
                 <li class="filter-option">
                   <input class="visually-hidden" type="checkbox" name="features" value="basket" id="filter-basket">
-                  <label for="filter-basket">Корзина</label> 
+                  <label for="filter-basket">Корзина</label>
                 </li>
               </ul>
             </fieldset>
-            <button class="show" type="submit">Показать</button>
+            <button class="button-form" type="submit">Показать</button>
             </form>
-            <div class="container">
+            <div class="form-item">
               <p>Сортировать</p>
               <ul>
-                <li><a class="filter-price" href="#nowhere">По цене</a></li>
-                <li><a class="filter-type" href="#nowhere">По типу</a></li>
-                <li><a class="filter-name" href="#nowhere">По названию</a></li>
+                <li><a class="filter-sort" href="#nowhere">По цене</a></li>
+                <li><a class="filter-sort text" href="#nowhere">По типу</a></li>
+                <li><a class="filter-sort text" href="#nowhere">По названию</a></li>
               </ul>
               <ul>
                 <li><a href="#nowhere">По убыванию</a></li>
                 <li><a href="#nowhere">По возрастанию</a></li>
               </ul>
-            </div>            
+            </div>
             <h2>Список шаблонов</h2>
             <ul class="template-list">
-                <li> 
-                    <h3><a class="template" href="#nowhere">Sedona</a></h3>
+                <li>
+                    <h3><a class="template-title" href="#nowhere">Sedona</a></h3>
                     <p>Информационный сайт для туристов</p>
                     <img src="img/img-sedona.jpg" alt="Информационный сайт для туристов">
                     <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a class="template" href="#nowhere">PinkApp</a></h3>
+                    <h3><a class="template-title" href="#nowhere">PinkApp</a></h3>
                     <p>Продуктовый лендинг приложения для iOS и Android</p>
                     <img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android">
                     <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a class="template" href="#nowhere">Barbershop</a></h3>
+                    <h3><a class="template-title" href="#nowhere">Barbershop</a></h3>
                     <p>Сайт салона красоты. Для мужчин, да.</p>
                     <img src="img/img-barbershop.jpg" alt="Сайт салона красоты. Для мужчин, да.">
                     <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a class="template" href="#nowhere">Mishka</a></h3>
+                    <h3><a class="template-title" href="#nowhere">Mishka</a></h3>
                     <p>Интернет-магазин вязаных игрушек</p>
                     <img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек">
                     <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a class="template" href="#nowhere">A Plus</a></h3>
+                    <h3><a class="template-title" href="#nowhere">A Plus</a></h3>
                     <p>Лендинг курсов повышения квалификации</p>
                     <img src="img/img-aplus.jpg" alt="Лендинг курсов повышения квалификации">
                     <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
                 <li>
-                    <h3><a class="template" href="#nowhere">Кваст</a></h3>
+                    <h3><a class="template-title" href="#nowhere">Кваст</a></h3>
                     <p>Промо-сайт производителя крафтового кваса</p>
                     <img src="img/img-kvast.jpg" alt="Промо-сайт производителя крафтового кваса">
                     <a class="button" href="#nowhere">9900 руб.</a>
                 </li>
             </ul>
-            <a href="writeus1.html">1</a>
-            <a href="writeus2.html">2</a>
-            <a href="writeus3.html">3</a>
-            <a href="writeus4.html">Следующая</a>
+            <a href="#nowhere">1</a>
+            <a href="#nowhere">2</a>
+            <a href="#nowhere">3</a>
+            <a href="#nowhere">Следующая</a>
         </section>
         <section>
             <h2 class="visually-hidden">Как до нас добраться</h2>
@@ -151,7 +151,7 @@
             <p>
               191186, Санкт-Петербург,
               ул. Б. Конюшенная, д. 19/8
-              <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a> 
+              <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
             </p>
             <a href="#nowhere">Напишите нам</a>
         </section>
@@ -184,5 +184,5 @@
             <p class="foot-head">Давайте дружить это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей.</p>
     </footer>
-  </body>  
+  </body>
 </html>
