--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               Покорите топ-10 приложений в AppStore и Google Play
             </p>
             <p>
-              <a class="button_application" href="#nowhere">Заказать</a>
+              <a class="button-green" href="#nowhere">Заказать</a>
             </p>
           </li>
           <li class="project">
@@ -80,7 +80,7 @@
               Вы даже не подозреваете, насколько вы изумительны!
             </p>
             <p>
-              <a class="button_plantation" href="#nowhere">Заказать</a>
+              <a class="button-yellow" href="#nowhere">Заказать</a>
             </p>
           </li>
         </ul>
@@ -133,7 +133,7 @@
           <p>
               191186, Санкт-Петербург,
               ул. Б. Конюшенная, д. 19/8
-              <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a> 
+              <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
             </p>
             <a class="button" href="#nowhere">Напишите нам</a>
       </section>
